# cs_project

./: .env.example  .gitignore  ADMIN_PANEL_ISSUES_SUMMARY.md  ADMIN_PANEL_README.md  ADMIN_STATISTICS_IMPLEMENTATION_SUMMARY.md  ADMIN_STATISTICS_README.md  COMPONENT_INTEGRATION_FIX.md  CONVERSATION_ANALYTICS_README.md  CONVERSATION_DB_INTEGRATION_SUMMARY.md  GUEST_MODE_AUTO_ENTRY_SUMMARY.md  GUEST_MODE_FEATURE.md  GUEST_MODE_IMPLEMENTATION_SUMMARY.md  GUEST_MODE_MACHINE_SEPARATION.md  GUEST_MODE_POSTGRESQL_LOGGING.md  Jenkinsfile  LANGGRAPH_RAG_UPGRADE.md  LannaFinChat_API_Tests.postman_collection.json  LannaFinChat_Environment.postman_environment.json  PDF_MANAGEMENT_SPINNER_UPGRADE.md  PDF_MANAGEMENT_SYSTEM.md  PDF_MANAGEMENT_UI_UPGRADE.md  Postman_Testing_Guide.md  README.md  TIMEZONE_SETUP_SUMMARY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_build_fronend.sh  run_build_image_dev.sh  run_dev_all.sh  run_dev_backend.sh  run_dev_frontend.sh  run_migration.sh  test_feedback.md
.github/workflows/: README.md  build.yml  build_backend.yaml  build_dockerfile.yml  build_fontend.yml  code-quality.yml  dependency-updates.yml  pipline.yaml  pr-management.yml  release.yml
.thclaws/sessions/: sess-18ad6975b8963a4f.jsonl
.thclaws/usage/ollama/: ollama_llama3.2.json
chat_api/: ADMIN_STATISTICS_API.md  BACKEND_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  chatbot_api.py  docker-build.sh  justfile  migrate_conversations.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_admin_statistics.py
chat_api/alembic/: env.py
chat_api/alembic/versions/: add_machine_id_to_guest_conversations.py
chat_api/app/: main.py
chat_api/app/api/: routes.py
chat_api/app/chat/: __init__.py  anonymous_router.py  chatbot.py  crud.py  feedback_crud.py  guest_crud.py  guest_router.py  models.py  router.py  schemas.py
chat_api/app/database/: models.py
chat_api/app/docs_process/: process_pdf.py
chat_api/app/login_system/: auth.py  crud.py  database.py  login.py  models.py  schemas.py  utils.py
chat_api/app/logs_system/:  models.py  chat_log.py  utils.py
chat_api/app/rag_system/: langgraph_rag_system.py  new_rag.py  rag_system.py
chat_api/app/router/: router.py
chat_api/app/routers/: router_admin.py  router_admin_conversations.py  router_chat_enhanced.py  router_feedback.py  router_login.py  router_pdfs.py  router_pdfs_enhanced.py
chat_api/app/schemas/: admin_conversation.py
chat_api/app/utils/: config.py  error_handler.py  logging_config.py  startup_check.py  timezone.py
chat_api/migrations/: add_token_blacklist.py
chat_api/scripts/: run_api_dev.sh
chat_api/tests/: conftest.py  test_error_handler.py  test_main.py  test_router_system.py  test_system_utils.py  test_validation.py
chat_api/tests/integration/: test_integration.py
chat_api/tests/unit/: test_main.py
chatbot_api/: .dockerignore  Dockerfile  README.md  build_docker.sh  chatbot_api.py  pyproject.toml  requirements.txt  run_api.sh
chatbot_api/app/: main.py
chatbot_api/app/RAG/: langgraph_rag_system.py  rag_system.py
chatbot_api/app/login_system/: auth.py  database.py  login.py  models.py  utils.py
chatbot_api/app/logs_system/:  models.py  chat_log.py  utils.py
chatbot_api/app/rag_system/: langgraph_rag_system.py  new_rag.py  rag_system.py
chatbot_api/app/routers/: router_chat.py  router_login.py  routers.py
chatbot_api/app/utils/: config.py  database.py
chatbot_api/scripts/: run_api_dev.sh
chatbot_login/: .env.examle  README.md  pyproject.toml
chatbot_login/app/: main.py
chatbot_login/app/login_system/: auth.py
chatbot_login/app/router/: router.py
chatbot_login/script/: run_chatbot_login.sh
chatbot_pdf_management_api/: .dockerignore  .env.example  01_setup_vecterdb.py  02_indexing.py  Dockerfile  README.md  build_with_docker.sh  create_vecter_db.py  docker-compose.yml  forms.py  pdf_management_api.py  pyproject.toml  requirements.txt  run.sh  run_server.sh  setup_vecterdb.py
chatbot_pdf_management_api/app/: __init__.py  main.py
chatbot_pdf_management_api/app/api/: process_pdf.py  routes.py
chatbot_pdf_management_api/app/docs_process/: process_pdf.py
chatbot_pdf_management_api/app/templates/: index.html  upload.html
chatbot_pdf_management_api/templates/: index.html  list.html  upload.html
chatbot_web/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
chatbot_web/src/: App.tsx
chatbot_web/src/components/: About.tsx  Admin.tsx  Chatbot.tsx  Footer.tsx  Login.tsx  Navbar.tsx  (+3 more)
client/: .dockerignore  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
client/public/: .htaccess  generate-icons.js
client/src/: App.tsx  config.ts
docs/: ACTIVITY_DIAGRAM_ANALYSIS.md  AUTO_SCROLL_IMPROVEMENT.md  DATA_DICTIONARY.md  DEPLOYMENT.md  ER_DIAGRAM.md  FEEDBACK_FEATURE_IMPLEMENTATION.md  FUNCTION_IMPLEMENTATION_SUMMARY.md  GUEST_MODE_POSTGRESQL_LOGGING.md  INPUT_AREA_FIX.md  INPUT_AREA_POSITION_FIX.md  INSTALLATION_SUCCESS.md  LOADING_INDICATOR_FIX.md  MACHINE_SEPARATION_IMPLEMENTATION_SUMMARY.md  PROJECT_SCOPE_SUMMARY.md  SEQUENCE_DIAGRAMS_ANALYSIS.md  STICKY_INPUT_AREA_FIX.md  SYSTEM_USE_CASE_ANALYSIS.md
frontend/: .dockerignore  Dockerfile  ENVIRONMENT.md  MARKDOWN_FEATURES.md  MARKDOWN_IMPLEMENTATION.md  README.md  build_docker.sh  docker-build-push.sh  docker-build.sh  index.html  justfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: generate-icons.js  manifest.json  offline.html  service-worker.js
frontend/src/: App.tsx  config.ts  index.css  main.tsx
notebook/: Build a simple LLM application with chat models and prompt templates.ipynb  chatbot.ipynb
server/: .dockerignore  .env.example  README.md  justfile  pyproject.toml
server/app/: main.py
server/scripts/: indexing_docs.py
(+157 files in other folders)
