[project]
name = "cs-project"
version = "0.1.0"
description = "final project for CS RMUTL RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.34.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.18",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.2",
    "openai>=1.82.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.12.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = [
    "notebook",
    "chatbot_login",
]
