[project]
name = "cs-project"
version = "0.1.0"
description = "final project for CS RMUTL RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.34.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.18",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.2",
    "openai>=1.82.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.12.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]

[tool.uv.workspace]
members = [
    "notebook",
    "chatbot_login",
]

[tool.poetry]
name = "chat-api"
version = "0.1.0"
description = ""
authors = ["Jeerasak Ananta <jeerasak.an@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "chat_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.8.2"}
python-dotenv = "^1.0.1"
langchain = "^0.2.6"
langchain-openai = "^0.1.14"
qdrant-client = "^1.9.1"
langchain-qdrant = "^0.1.1"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
langgraph = "^0.0.69"
httpx = "^0.27.0"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
