[project]
name = "chatbot-pdf-management-api"
version = "0.3.0"
description = "PDF management API for a chatbot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.32.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.17",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.12.1",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.2",
]
